# DRF

./: .env.example  Dockerfile  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
materials/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py
users/: admin.py  forms.py  models.py  serializers.py  servis.py  tests.py  urls.py  views.py
users/fixtures/: groups.json
users/management/commands/: csu.py  load_payments.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_payment.py  0004_subscription.py
