[tool.poetry]
name = "framework"
version = "0.1.0"
description = ""
authors = ["user <dolmatova3010@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
psycopg2 = "^2.9.10"
pillow = "^11.0.0"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
djangorestframework-simplejwt = "^5.3.1"
flake8 = "^7.1.1"
pytest-django = "^4.9.0"
coverage = "^7.6.10"
drf-yasg = "^1.21.8"
drf-spectacular = "^0.28.0"
stripe = "^11.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
